--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "bun test",
+    "test:watch": "bun test --watch",
     "build": "bun build ./src/index.ts --outdir dist --target node",
     "build:types": "tsc --emitDeclarationOnly",
     "format": "bunx @biomejs/biome format ./src --write",
     "lint": "bunx @biomejs/biome lint ./src --apply"
   },
   "devDependencies": {
+    "@apollo/server-integration-testsuite": "4.9.5",
     "@biomejs/biome": "1.4.1",
     "bun-types": "latest"
   },
