fix building types

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "build": "bun build ./src/index.ts --outdir dist --target node",
-    "build:types": "tsc --emitDeclarationOnly",
+    "build:types": "tsc -p tsconfig.build.json --emitDeclarationOnly ",
+    "bundle": "bun run build && bun run build:types",
     "format": "bunx @biomejs/biome format ./src --write",
     "lint": "bunx @biomejs/biome lint ./src --apply"
   },
